--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy = "0.6"
-asefile = { git = "https://github.com/B-Reif/asefile", branch = "main" }
+bevy = "0.7"
+asefile = { git = "https://github.com/B-Reif/asefile", rev = "4bb33e1398461b3d153d99ab0830bb87f347dce2" }
 anyhow = "1.0"
-benimator = { version = "2.2", optional = true }
-bevy_ecs_tilemap = { version = "0.5", optional = true }
+benimator = { version = "3.0", optional = true }
+bevy_ecs_tilemap = { version = "0.6", git = "https://github.com/StarArawn/bevy_ecs_tilemap", rev = "6796c2355b75fa383fa4067443413f8bbe4a2956", optional = true }
 
 [profile.dev.package."*"]
 opt-level = 2
