--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bevy_ase"
-version = "0.4.0"
+version = "0.4.1"
 authors = ["Bruce Reif", "alpine_alpaca <alpine.alpaca.games@gmail.com>", ]
 edition = "2021"
 
@@ -11,7 +11,7 @@ bevy = "0.8"
 asefile = "0.3.5"
 anyhow = "1.0"
 bevy_ecs_tilemap = { version = "0.7.0", optional = true }
-benimator = { version = "4.0.0-rc.1", optional = true}
+benimator = { version = "^4.0.0", optional = true}
 
 [profile.dev.package."*"]
 opt-level = 2
